--- a/index.html
+++ b/index.html
@@ -11,112 +11,114 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-
+    <link rel="stylesheet" href="css/index.css" />
     <title>Frontend Mentor | Interactive card details form</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
-    <main>
-      <div>
-        <h1>Card details form</h1>
-        <div class="card">
-          <div class="card-front">
-            <img src="images/bg-card-front.png" alt="card-front" />
-            <span><img src="images/card-logo.svg" alt="logo" /></span>
-            <span class="card-number">0000 0000 0000 0000</span>
-            <span class="card-name">Jane Appleseed</span>
-            <span class="card-date">00/00</span>
-          </div>
-          <div class="card-back">
-            <img src="images/bg-card-back.png" alt="" />
-            <span class="card-cvc">000</span>
-          </div>
+    <img
+      class="bg-img"
+      src="images/bg-main-desktop.png"
+      alt="background image for desktop view"
+    />
+    <img
+      class="bg-img-xs"
+      src="images/bg-main-mobile.png"
+      alt="background image for mobile view"
+    />
+    <div class="container">
+      <section class="card-display">
+        <div class="card-front">
+          <img
+            class="card-front-img"
+            src="images/bg-card-front.png"
+            alt="display of card front"
+          />
+          <img
+            class="card-logo"
+            src="images/card-logo.svg"
+            alt="logo on the card"
+          />
+          <p class="card-number-display">1234 5678 9123 0000</p>
+          <p class="cardholder-display">Jiwuaku Maria-goretti</p>
+          <p class="expiry-month-display">00</p>
+          <p class="expiry-divider-display">/</p>
+          <p class="expiry-year-display">0000</p>
         </div>
-        <div>
-          <form action="">
-            <div>
-              <label for="name">Cardholder Name</label>
+
+        <div class="card-back">
+          <img class="card-back-img" src="images/bg-card-back.png" alt="" />
+          <p class="cvc-display">000</p>
+        </div>
+      </section>
+
+      <section class="card-details">
+        <form id="myForm" action="/action_page.php" name="myForm">
+          <label for="cardholder-name"> CARDHOLDER NAME</label>
+          <input
+            id="cardholder-name"
+            class="cardholder-name"
+            type="text"
+            name="cardholder-name"
+            placeholder="John Wick's Dog"
+            oninput="inputName()"
+          />
+          <p id="errorMsg"></p>
+
+          <label class="card-number" for="card-number"> CARD NUMBER</label>
+          <input
+            id="card-number"
+            class="card-number"
+            type="text"
+            name="card-number"
+            placeholder="1234 5678 9123 0000"
+            oninput="inputCardNum()"
+          />
+          <p id="card-num-error"></p>
+
+          <div class="flex">
+            <label class="expiry-date" for="expiry-date">
+              EXP. DATE (MM/YYYY)<br />
               <input
+                class="expiry"
                 type="text"
-                name="name"
-                id="name"
-                required
-                placeholder="Name e.g. Jane Appleseed"
+                name="expiry-date"
+                placeholder="MM"
+                oninput="inputMM()"
               />
-            </div>
-            <div>
-              <label for="number">Card Number</label>
               <input
-                type="number"
-                id="number"
-                name="number"
-                required
-                placeholder="e.g. 1234 5678 9123 0000"
-                maxlength="19"
+                class="expiry"
+                type="text"
+                name="expiry-date"
+                placeholder="YYYY"
+                oninput="inputYY()"
               />
-            </div>
-            <div>
-              <div>
-                <label for="month">Exp. Date (MM/YY)</label>
-                <input
-                  type="number"
-                  class="month"
-                  required
-                  placeholder="MM"
-                  maxlength="2"
-                  pattern="\d*"
-                />
-                <input
-                  type="number"
-                  required
-                  placeholder="YY"
-                  class="year"
-                  maxlength="2"
-                  pattern="\d*"
-                />
-              </div>
-              <div class="cvc">
-                <label for="cvc">CVC</label>
-                <input
-                  type="number"
-                  class="cvc"
-                  required
-                  placeholder="CVC"
-                  maxlength="3"
-                  pattern="\d*"
-                />
-              </div>
-            </div>
-            <button type="submit">Confirm</button>
-          </form>
+              <p id="expiry-error"></p>
+            </label>
 
-          <!-- Completed state start -->
-
-          <div class="thank">
-            <img src="images/icon-complete.svg" alt="" />
-            <h2>Thank You !</h2>
-            <p>We've added your card details</p>
-            <button>Continue</button>
+            <label class="cvc" for="cvc">
+              CVC<br />
+              <input
+                id="cvc"
+                class="cvc"
+                type="text"
+                name="cvc"
+                placeholder="123"
+                oninput="inputCvc()"
+              />
+              <p id="error-cvc"></p>
+            </label>
           </div>
-        </div>
-      </div>
-    </main>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Jiwuaku Maria-goretti </a>.
+          <button id="submit">Confirm</button>
+        </form>
+        <div id="thank-you" class="thank-you hidden">
+          <img src="images/icon-complete.svg" alt="" />
+          <h2 id="thank-you-header">Thank You!</h2>
+          <p>We've added your card details</p>
+          <button id="continue">Continue</button>
+        </div>
+      </section>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
