--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             class="cardholder-name"
             type="text"
             name="cardholder-name"
-            placeholder="John Wick's Dog"
+            placeholder="Jiwuaku Maria-goretti"
             oninput="inputName()"
           />
           <p id="errorMsg"></p>
